--- a/src/main/resources/templates/categoria/modifica.html
+++ b/src/main/resources/templates/categoria/modifica.html
@@ -7,9 +7,8 @@
     <body>
         <header th:replace="~{layout/plantilla :: header}"/>
         
-        <section th:replace="~{categoria/fragmento :: botonesAgregar}"/>
-        <section th:replace="~{categoria/fragmento :: agregarCategoria}"/>
-        <section th:replace="~{categoria/fragmento :: listadoCategorias}"/>
+        <section th:replace="~{categoria/fragmento :: editarCategoria}"/>
+        
         
         <footer th:replace="~{layout/plantilla :: footer}"/>
     </body>
