--- a/src/main/resources/templates/pruebas/listado2.html
+++ b/src/main/resources/templates/pruebas/listado2.html
@@ -1,15 +1,14 @@
- <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
     <head th:replace="~{layout/plantilla :: head}">
-        <title>TechShop</title>
+        <title>lapagina</title>
     </head>
     <body>
         <header th:replace="~{layout/plantilla :: header}"/>
+        
+        <section th:replace="~{pruebas/fragmento :: filtros}"/>
+        <section th:replace="~{pruebas/fragmento :: listadoProductos}"/>
 
-        <section th:replace="~{pruebas/fragmentos :: filtros}"/>
-        <section th:replace="~{pruebas/fragmentos :: listadoProductos}"/>
-
-        <footer th:replace="~{layout/plantilla :: footer}"/>       
+        <footer th:replace="~{layout/plantilla :: footer}"/>
     </body>
 </html>
